将部分stream().toList()改为collect(Collectors.toList())。